--- a/src/style/_fleuron.sass
+++ b/src/style/_fleuron.sass
@@ -5,6 +5,7 @@
   margin-top: 3em
   width: 1em
   transition: transform .7s ease-in-out
+  filter: var(--default-inversion-filter)
 
   &:hover
     transform: rotate(360deg)
