--- a/src/style/_theme.sass
+++ b/src/style/_theme.sass
@@ -9,7 +9,7 @@
   --light-logo-bg: #{$light-BG}
   --light-logo-shadow: none
   --light-logo-pre-inner-shadow: none
-  --light-fleuron-filter: invert(0)
+  --light-inversion-filter: invert(0)
 
 @mixin default-light
   --default-color-bg: var(--light-color-bg)
@@ -20,7 +20,7 @@
   --default-logo-bg: var(--light-logo-bg)
   --default-logo-shadow: var(--light-logo-shadow)
   --default-logo-pre-inner-shadow: var(--light-logo-pre-inner-shadow)
-  --default-fleuron-filter: var(--light-fleuron-filter)
+  --default-inversion-filter: var(--light-inversion-filter)
 
 @mixin dark-vars
   --dark-color-bg: #{$dark-BG}
@@ -33,7 +33,7 @@
   --dark-logo-bg: #{$dark-FG}
   --dark-logo-shadow: 0 0 60px 30px #fbf88d, 0 0 100px 60px #f7eb5c, 0 0 140px 90px #e8b6bc
   --dark-logo-pre-inner-shadow: inset 0 0 60px 30px #fbf88d
-  --dark-fleuron-filter: invert(100%)
+  --dark-inversion-filter: invert(100%)
 
 @mixin default-dark
   --default-color-bg: var(--dark-color-bg)
@@ -44,7 +44,7 @@
   --default-logo-bg: var(--dark-logo-bg)
   --default-logo-shadow: var(--dark-logo-shadow)
   --default-logo-pre-inner-shadow: var(--dark-logo-pre-inner-shadow)
-  --default-fleuron-filter: var(--dark-fleuron-filter)
+  --default-inversion-filter: var(--dark-inversion-filter)
 
 :root
   @include light-vars
